tests/valid/Statements_Syntax/while Statement.vyp
void main(void) {
    int a;
    a = 3;
    while (a > 0) {
        print(a, "\n");
        a = a - 1;
    }
}
