tests/invalid/Statements_Syntax/Unbalanced_Parentheses.vyp
void main(void) {
    int a;
    a = (5 + 3;  // Missing closing parenthesis
}
